Bug 79967 - [BDW] There is garbage when moving the windows or move cursor on the menu.
Summary: [BDW] There is garbage when moving the windows or move cursor on the menu.
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-13 05:42 UTC by EvaWang
Modified: 2017-07-24 22:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg.log (73.53 KB, text/plain)
2014-06-13 05:42 UTC, EvaWang
no flags Details
garbage.wma (2.81 MB, text/plain)
2014-06-13 05:50 UTC, EvaWang
no flags Details
xorg.0.log (23.44 KB, text/plain)
2014-06-13 07:18 UTC, EvaWang
no flags Details
Xorg.0.log (20.46 KB, text/plain)
2014-06-13 10:23 UTC, EvaWang
no flags Details
xorg.0.log (20.46 KB, text/plain)
2014-06-16 09:33 UTC, EvaWang
no flags Details

Description EvaWang 2014-06-13 05:42:02 UTC
Created attachment 100950 [details]
dmesg.log

[BDW] There is garbage when moving the windows or move cursor on the menu.
kernel: 3.14
please refer attachment dmesg and video.
we tried 3.14.7, it still have the issue.
Comment 1 EvaWang 2014-06-13 05:50:14 UTC
Created attachment 100955 [details]
garbage.wma
Comment 2 Chris Wilson 2014-06-13 07:08:30 UTC
You need to attach Xorg.0.log.
Comment 3 EvaWang 2014-06-13 07:18:09 UTC
Created attachment 100962 [details]
xorg.0.log

Attached Xorg.0.log.
Comment 4 Chris Wilson 2014-06-13 07:29:48 UTC
I think this should be fixed by:

commit 8e743ccef8f19b1226ceb8d6a5ceab65584a620d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 13 08:27:05 2014 +0100

    sna/gen8: Check for WT support before attempting to use the WT mocs
    
    It appears the kernel has a better idea when WT is supported on which
    gen8 parts. I assumed it was always supported, but experience suggests
    otherwise, so only use WT support when advertised.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=79967
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 EvaWang 2014-06-13 10:23:13 UTC
Created attachment 100970 [details]
Xorg.0.log

After added the patch to xf86-video-intel-2.99.912, the issue still existed, please refer Xorg.0.log. Thanks!
Comment 6 Chris Wilson 2014-06-13 10:35:10 UTC
The other use of mocs is in mesa, can you *also* please apply:

diff --git a/src/mesa/drivers/dri/i965/brw_defines.h b/src/mesa/drivers/dri/i965/brw_defines.h
index 3afd399..620f8a2 100644
--- a/src/mesa/drivers/dri/i965/brw_defines.h
+++ b/src/mesa/drivers/dri/i965/brw_defines.h
@@ -2199,8 +2199,8 @@ enum brw_wm_barycentric_interp_mode {
 #define HSW_MOCS_UC_LLC_WB_ELLC         (3 << 1)
 
 /* Broadwell: write-back or write-through; always use all the caches. */
-#define BDW_MOCS_WB 0x78
-#define BDW_MOCS_WT 0x58
+#define BDW_MOCS_WB 0
+#define BDW_MOCS_WT 0
 
 #include "intel_chipset.h"
Comment 7 EvaWang 2014-06-16 09:32:56 UTC
(In reply to comment #6)
> The other use of mocs is in mesa, can you *also* please apply:
> 
> diff --git a/src/mesa/drivers/dri/i965/brw_defines.h
> b/src/mesa/drivers/dri/i965/brw_defines.h
> index 3afd399..620f8a2 100644
> --- a/src/mesa/drivers/dri/i965/brw_defines.h
> +++ b/src/mesa/drivers/dri/i965/brw_defines.h
> @@ -2199,8 +2199,8 @@ enum brw_wm_barycentric_interp_mode {
>  #define HSW_MOCS_UC_LLC_WB_ELLC         (3 << 1)
>  
>  /* Broadwell: write-back or write-through; always use all the caches. */
> -#define BDW_MOCS_WB 0x78
> -#define BDW_MOCS_WT 0x58
> +#define BDW_MOCS_WB 0
> +#define BDW_MOCS_WT 0
>  
>  #include "intel_chipset.h"

Apply mesa and xf86-video-intel patches, it seems more serious than before. it will show garbage when click a button or windows

Please refer the xorg.0.log
Comment 8 EvaWang 2014-06-16 09:33:26 UTC
Created attachment 101156 [details]
xorg.0.log
Comment 9 EvaWang 2014-06-30 10:01:58 UTC
Could you help to update the issue? Thanks!
Comment 10 Rodrigo Vivi 2014-09-24 18:40:06 UTC
Is it still happening with latest mesa, ddx and drm-intel-nightly?
Comment 11 EvaWang 2014-09-29 07:19:12 UTC
(In reply to comment #10)
> Is it still happening with latest mesa, ddx and drm-intel-nightly?

with kernel 3.17, the issue can not reproduced. Thanks!
Comment 12 Jani Nikula 2014-09-29 09:53:48 UTC
(In reply to comment #11)
> (In reply to comment #10)
> > Is it still happening with latest mesa, ddx and drm-intel-nightly?
> 
> with kernel 3.17, the issue can not reproduced. Thanks!

Closing, thanks for the report and testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.